--- a/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
+++ b/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\201806120828328_AddCategoryDescription.Designer.cs">
       <DependentUpon>201806120828328_AddCategoryDescription.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806121643276_AddProductDescriptionManCodePrice.cs" />
+    <Compile Include="Migrations\201806121643276_AddProductDescriptionManCodePrice.Designer.cs">
+      <DependentUpon>201806121643276_AddProductDescriptionManCodePrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -84,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806120828328_AddCategoryDescription.resx">
       <DependentUpon>201806120828328_AddCategoryDescription.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806121643276_AddProductDescriptionManCodePrice.resx">
+      <DependentUpon>201806121643276_AddProductDescriptionManCodePrice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
