--- a/KatlaSport.Services.Tests/KatlaSport.Services.Tests.csproj
+++ b/KatlaSport.Services.Tests/KatlaSport.Services.Tests.csproj
@@ -112,6 +112,7 @@
     <Compile Include="FakeEntitySet.cs" />
     <Compile Include="HiveManagement\HiveManagementServiceTests.cs" />
     <Compile Include="HiveManagement\HiveSectionManagementServiceTests.cs" />
+    <Compile Include="MapperInitializer.cs" />
     <Compile Include="MockExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DbAsync\TestDbAsyncQueryProvider.cs" />
